--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate for react app",
   "main": "main.js",
   "scripts": {
+    "start": "webpack-dev-server --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,17 @@
   "bugs": {
     "url": "https://github.com/mach1/react-boilerplate/issues"
   },
-  "homepage": "https://github.com/mach1/react-boilerplate#readme"
+  "homepage": "https://github.com/mach1/react-boilerplate#readme",
+  "devDependencies": {
+    "babel-core": "^6.0.14",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.0.14",
+    "babel-preset-react": "^6.0.14",
+    "react-hot-loader": "^1.3.0"
+  },
+  "dependencies": {
+    "react": "^0.14.1",
+    "react-dom": "^0.14.1",
+    "react-router": "^0.13.4"
+  }
 }
