--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate for react app",
   "main": "main.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,11 +28,22 @@
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.14",
     "babel-preset-react": "^6.0.14",
-    "react-hot-loader": "^1.3.0"
+    "bootstrap-webpack": "0.0.5",
+    "css-loader": "^0.21.0",
+    "file-loader": "^0.8.4",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
-    "react-router": "^0.13.4"
+    "react-router": "^1.0.0-rc3"
   }
 }
