--- a/package.json
+++ b/package.json
@@ -46,9 +46,8 @@
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.6",
-    "react-router": "^1.0.0-rc3",
-    "react-simple-router": "^0.1.6",
+    "react-router": "^1.0.3",
     "redux": "^3.0.5",
-    "redux-simple-router": "^1.0.2"
+    "redux-simple-router": "^2.0.3"
   }
 }
