--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "bootstrap": "^3.3.5",
     "history": "^1.17.0",
     "jquery": "^2.1.4",
+    "material-ui": "^0.14.4",
+    "postcss-loader": "^0.8.1",
     "react": "^0.14.1",
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.6",
     "react-router": "^1.0.3",
+    "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.0.5",
     "redux-simple-router": "^2.0.3"
   }
