--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "react-dom": "^0.14.1",
     "react-redux": "^4.0.6",
     "react-router": "^1.0.3",
+    "react-router-redux": "^4.0.0",
     "react-tap-event-plugin": "^0.2.2",
-    "redux": "^3.0.5",
-    "redux-simple-router": "^2.0.3"
+    "redux": "^3.0.5"
   }
 }
