--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.2",
+    "babel-preset-stage-2": "^6.5.0",
     "bluebird": "^3.3.4",
     "bootstrap": "^3.3.5",
     "history": "^1.17.0",
