--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bluebird": "^3.3.4",
     "bootstrap": "^3.3.5",
     "history": "^1.17.0",
+    "immutable": "^3.7.6",
     "jquery": "^2.1.4",
     "material-ui": "^0.14.4",
     "postcss-loader": "^0.8.1",
